# product_kpis

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  database.py  ddl.sql  handler.py  login.py  main.py  product_kpis.py  pyproject.toml  requirements.txt  utils.py
specs/001-kpi-tool/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-kpi-tool/checklists/: requirements.md
specs/001-kpi-tool/contracts/: README.md  kpi_interface.py
specs/002-first-time-right-exports/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-first-time-right-exports/checklists/: requirements.md
src/: __init__.py  config.py  main.py
src/credentials/: __init__.py  keychain.py
src/database/: connection.py
src/export/: __init__.py  base.py  csv_exporter.py  json_exporter.py
src/kpis/: __init__.py  base.py  orders_by_date.py
src/kpis/first_time_right_exports/: __init__.py  config.json  first_time_right_exports.py
src/menu/: __init__.py  console.py
src/models/: __init__.py  result.py
src/runner/: __init__.py  executor.py
tests/: __init__.py  conftest.py
tests/unit/: test_first_time_right_exports.py
