[project]
name = "product-kpis"
version = "0.1.0"
description = "A modular CLI tool for generating product KPI reports"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "keyring>=24.0",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[project.scripts]
product-kpis = "src.main:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
